Adicionei um paragrafo

--- a/SiteExemplo/index.html
+++ b/SiteExemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt nobis quo distinctio explicabo quod voluptates, neque iusto et suscipit repellat ea rerum expedita, quibusdam, nam doloremque eaque dolorum cupiditate?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus soluta velit, repellendus voluptas hic doloribus dicta rem animi, officiis blanditiis, aliquam accusamus. Temporibus hic rerum maxime iure nulla ab repudiandae.</p>
 </body>
 </html>
